<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/first"
        android:layout_width="68dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:backgroundTint="@color/boxcolor">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/yp"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:visibility="visible"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingVertical="12dp"
            android:paddingHorizontal="12dp"
            android:background="@color/boxcolor"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:padding="18dp"
        app:cardCornerRadius="10dp">



        <LinearLayout
            android:id="@+id/linearlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:padding="5dp">

           <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/invite"
             android:textSize="18sp"
             android:textAllCaps="true"
             android:layout_gravity="end"
             android:textColor="@color/primary"
             android:textStyle="bold|normal"
             />

           <TextView
               android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/person_name"
             android:textStyle="bold"
             android:textColor="@color/primary"
             android:textSize="22sp"
                android:paddingStart="15dp"
              tools:ignore="RtlSymmetry"
               android:layout_marginStart="45dp"
             />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textStyle="normal"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:paddingStart="15dp"
                android:layout_marginStart="45dp"
                tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/role"
                    android:textStyle="normal"
                    android:textColor="@color/primary"
                    android:textSize="18sp"
                    android:paddingStart="15dp"
                    android:layout_marginStart="35dp"
                    tools:ignore="RtlSymmetry" />


            </LinearLayout>

            <TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:paddingStart="15dp"
                android:layout_marginStart="45dp"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="180dp"
                android:layout_height="20dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="10dp"
                android:progress="10"
                android:progressDrawable="@drawable/custom_progress_bar"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purpose"
                    android:textColor="@color/primary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="16dp"
                    android:layout_margin="3dp"
                    android:background="@color/second" />

                <TextView
                    android:id="@+id/p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/purpose"
                    android:textColor="@color/primary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="16dp"
                    android:layout_margin="3dp"
                    android:layout_marginStart="5dp"
                    android:background="@color/second" />

                <TextView
                    android:id="@+id/p3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/purpose"
                    android:textColor="@color/primary"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:id="@+id/des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutyourself"
                android:textStyle="normal"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:maxLines="2"
                android:paddingStart="15dp"
                tools:ignore="RtlSymmetry" />


        </LinearLayout>








    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>